prevent input group buttons wrapping to multiple lines

--- a/scss/forms/_input-group.scss
+++ b/scss/forms/_input-group.scss
@@ -46,6 +46,7 @@ $input-prefix-padding: 1rem !default;
 
   %input-group-child {
     margin: 0;
+    white-space: nowrap;
 
     @if not $global-flexbox {
       display: table-cell;
